[project]
name = "tp3"
version = "0.1.0"
description = ""
authors = [
    {name = "Yoann Mahiout",email = "mahiout@et.esiea.fr"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
